# perf-mon

./: .env  package-lock.json  package.json
src/: ProcessTable.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
