[package]
name = "perf-mon"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "perf_mon_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.28"             # Для получения информации о системе и процессах
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }  # Для HTTP-запросов
tokio = { version = "1", features = ["full"] }       # Для асинхронного выполнения
lazy_static = "1.4"          # Для создания глобального буфера
dotenv = "0.15"
